# fsrng

./: .gitignore  Cargo.toml
data/: meta.json
data/dark_souls_remastered/: objectives.json  routes.json
data/demons_souls/: objectives.json  routes.json
data/route_schemas/: demons_souls.json
data/schemas/: bloodborne.json  dark_souls_ii_sotfs.json  dark_souls_iii.json  dark_souls_remastered.json  demons_souls.json  elden_ring.json  sekiro.json
src/: data.rs  interface.rs  lib.rs  main.rs
src/data/: models.rs
