[package]
name = "fsrng"
version = "0.1.0"
edition = "2021"
default-run = "fsrng"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rand_chacha = "0.3.1"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
